# AI-OP

./: .dockerignore  .env.vercel.preview.tmp  .env.vercel.production.inspect  .env.vercel.production.tmp  .gitignore  AETHER_OS_SPEC.md  ARCHITECTURE.md  AUTONOMOUS_FACTORY_PR_PLAN.md  Dockerfile  RELEASE_NOTES.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  upgrade_log.txt  vercel.json
.claude/: settings.local.json
.github/agents/: KASHAI-PLANNER  aetheerai-conductor.agent.md  aetheerai-factory.agent.md
.github/instructions/: aetheerai-security.instructions.md
.github/prompts/: redteam-review.prompt.md
.github/workflows/: security-hardening-ci.yml
AetheerAI/: .env.example  AETHER_README.md  FLOW.md  README.md  __init__.py  app.py  build_pyinstaller.py  launcher.py  main.py  requirements.txt  start_api.py  start_worker.py
AetheerAI/.github/: copilot-instructions.md
AetheerAI/agents/: __init__.py  agent_manifest.py  agent_spec.py  base_agent.py  ceo_agent.py  developer_agent.py  marketing_agent.py  operations_agent.py  research_agent.py  support_agent.py
AetheerAI/ai/: __init__.py  ai_adapter.py
AetheerAI/api/: __init__.py  async_jobs.py  auth.py  customer_supabase.py  database.py  db_router.py  goal_router.py  server.py  (+11 more)
aether-os/: .env  .env.example  .gitignore  AetheerAI_Master.spec  AetherAi_MasterAI.spec  Start_AetherAi.bat  app.py  build_main_exe.bat  build_setup_exe.bat  demo.py  launch.bat  launch_ollama.bat  launcher.py  main.py  requirements.txt  setup.bat  test_aether.py
api/: __init__.py  requirements.txt  server.py
app/: __init__.py  cli.py  dashboard.py  server.py
data/: AETHEERAI.sqlite-shm  AETHEERAI.sqlite-wal  README.md
docs/: AETHEERAI_SPEC.md  ARCHITECTURE.md  AUTONOMOUS_FACTORY_PR_PLAN.md  EXTERNAL_SERVICES_SETUP.md  OBSERVABILITY_STACK.md  PRODUCTION_READINESS.md  RELEASE_NOTES.md  VERCEL_ENV_SETUP.md  upstash_llms.txt
launchers/: Start_API.bat  Start_AetheerAi.bat  build_setup_exe.bat  setup.bat
models/: README.md  model.pkl  pipeline.py  train_model.py
output/: AetheerAI_Master.spec
scripts/: sync_ui.ps1  upgrade_all.ps1
src/: __init__.py
ui/: app.js  index.html  styles.css
(+470 files in other folders)
